function and loops

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 </head>
 <body>
     <div class="input">
-        <input class="btn1" type="button" onclick="hello()" value="Greeting"> 
+        <input class="btn1" type="button" onclick="myfunction()" value="Alert"> 
     </div>
     <p>Click the button to create a variable, and display the result</p>
 
     <!-- <button onclick="myfunction()">Try It</button> -->
     
     <p id="demo">_______replace it</p>
+    <p id="demo1"></p>
+    <p id="demo2"></p>
+
+
 
     <script src="./script.js"></script>
 </body>
